// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/dialog should match snapshot 1`] = `
<div>
  <div
    class="Dialog dialog-back undefined size--medium"
  >
    <div
      class="backdrop"
    />
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <div>
            <h1
              class="dialog-title"
            />
          </div>
          <div
            class="toolbar--right"
          >
            <button
              aria-label="Close dialog"
              class="IconButton dialog__close size--medium"
              title="Close dialog"
              type="button"
            >
              <i
                class="CompassIcon icon-close CloseIcon"
              />
            </button>
          </div>
        </div>
        <div
          id="test"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/dialog should return dialog and click on cancel button 1`] = `
<div>
  <div
    class="Dialog dialog-back undefined size--medium"
  >
    <div
      class="backdrop"
    />
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <div>
            <h1
              class="dialog-title"
            />
          </div>
          <div
            class="toolbar--right"
          >
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <button
                class="IconButton size--medium"
                type="button"
              >
                <i
                  class="CompassIcon icon-dots-horizontal OptionsIcon"
                />
              </button>
            </div>
            <button
              aria-label="Close dialog"
              class="IconButton dialog__close size--medium"
              title="Close dialog"
              type="button"
            >
              <i
                class="CompassIcon icon-close CloseIcon"
              />
            </button>
          </div>
        </div>
        <div
          id="test"
        />
      </div>
    </div>
  </div>
</div>
`;
